--- a/subscription.html
+++ b/subscription.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Bookflix — Подписка</title>
-    <link rel="stylesheet" href="style.css?v=2.0">
+    <link rel="stylesheet" href="style.css?v=1704123456">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body class="subscription-body">
@@ -116,8 +119,8 @@
         </button>
     </nav>
 
-    <script src="script.js?v=2.0"></script>
-    <script src="subscription.js?v=2.0"></script>
+    <script src="script.js?v=1704123456"></script>
+    <script src="subscription.js?v=1704123456"></script>
 </body>
 </html>
 
